# ts3-autofollow

./: .gitignore  CMakeLists.txt  README.md  package.ini
src/: plugin.c
